//
//  Quaternion.swift
//  FitnessHeadTracker
//
//  Created by Dennis Moschina on 04.11.22.
//

import Foundation

protocol Quaternion {
    var x: Double { get set }
    var y: Double { get set }
    var z: Double { get set }
    var w: Double { get set }
}
