//
//  RotationRate.swift
//  FitnessHeadTracker
//
//  Created by Dennis Moschina on 04.11.22.
//

import Foundation

protocol RotationRate {
    var x: Double { get set }
    var y: Double { get set }
    var z: Double { get set }
}
