//
//  Acceleration.swift
//  FitnessHeadTracker
//
//  Created by Dennis Moschina on 04.11.22.
//

import Foundation

protocol Acceleration {
    var x: Double { get set }
    var y: Double { get set }
    var z: Double { get set }
}
