//
//  RotationMatrix.swift
//  FitnessHeadTracker
//
//  Created by Dennis Moschina on 04.11.22.
//

import Foundation

protocol RotationMatrix {
    var m11: Double { get set }
    var m12: Double { get set }
    var m13: Double { get set }
    var m21: Double { get set }
    var m22: Double { get set }
    var m23: Double { get set }
    var m31: Double { get set }
    var m32: Double { get set }
    var m33: Double { get set }
}
